minor error corrections

--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                             <div class="row">
                                 <div class="col-12 text-center mb-2">
                                     <ul class="list-inline mb-4" id="portfolio-flters">
-                                        <li class="btn btn-outline-primary active"  data-filter="*"><i class="fa fa-star mr-2"></i>All</li>
-                                        <li class="btn btn-outline-primary" data-filter=".first"><i class="fa fa-laptop-code mr-2"></i>Out of Class></li>
-                                        <li class="btn btn-outline-primary" data-filter=".second"><i class="fa fa-mobile-alt mr-2"></i>Class Projects</li>
+                                        <li class="btn btn-outline-primary active"  data-filter="*"><i class="fa fa-sun mr-2"></i>All</li>
+                                        <li class="btn btn-outline-primary" data-filter=".first"><i class="fa fa-lightbulb mr-2"></i>Out of Class Projects</li>
+                                        <li class="btn btn-outline-primary" data-filter=".second"><i class="fa fa-school mr-2"></i>Class Projects</li>
                                     </ul>
                                 </div>
                             </div>
@@ -381,7 +381,7 @@
                 </div>
                     <div class="col-12">
                         <p>I am proud of the small wins that keep me moving forward. </p>
-                        <p> Every win validates my current strategy but marks a beginning of the next level of adventure! </p>
+                        <p> Every win validates my current strategy but marks a beginning to the next level of adventure! </p>
                         <div class="row">
                             <div class="col-sm-6 py-1">
                                 <h5 class="d-inline text-primary">International Summer School on BIO-X 2022</h5> Among the 32 students globally who were selected for the 2022 fellowship held in Greece.<p> Together with <a href="https://www.linkedin.com/in/monica-isgut-4b16b083?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAABG49cUBSeyVJDqz_CliiYpd_frzGsNev2Y&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BIZWrf3Z1QP2zF4RAuy7d%2Fg%3D%3D">Monica Isgut</a>, commemorated 
@@ -440,7 +440,7 @@
                             <p> When in KamiLimu, I participated in the Red Bull Basement National pitch competition <a href="https://www.youtube.com/watch?v=eWX_HnqJdBs">HealtHub.</a></p>
                             <p>Collaborated on IoT project - Slidoor</p>
                             <p> Completed the 8 month mentorship program with the highest attedance rate and with the highest social engagement. </p>
-                            <p> Featured on KamiLimu's medium account <a href="https://kamilimu.medium.com/antony-m-gitau-getting-along-getting-ahead-ff6bedf6a650"> Getting Along. Getting Ahead.</a></p>
+                            <p> Featured on KamiLimu's medium blog<a href="https://kamilimu.medium.com/antony-m-gitau-getting-along-getting-ahead-ff6bedf6a650"> Getting Along. Getting Ahead.</a></p>
                         </div>
                         <div class="col-md-6 service-item text-center mb-3">
                             <img src="img/ieee.jpeg" alt="Trulli" width="140" height="90">
@@ -462,7 +462,7 @@
                         </div>
                         <div class="col-md-6 service-item text-center mb-3">
                             <img src="img/ku.png" alt="Trulli" width="120" height="120">
-                            <h5 class="mb-2">Peer Couseling</h5>
+                            <h5 class="mb-2">Peer Counseling</h5>
                             <p> I joined this Peer counseling in 2018 after a 10 full-days training at Kenyatta University. </p>
                             <p> I have participated in door-to-door peer counseling which have informed students of the free and supportive help from the counseling department.</p>
                             <p> I have offered a listening ear to over 10 students in a formal one-to-one peer counseling</p>
@@ -564,15 +564,6 @@
                             <a class="btn btn-outline-primary btn-square mr-2" href="hhttps://www.instagram.com/antony_m_gitau/"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/antony-m-gitau/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-primary btn-square" href="https://github.com/Antony-gitau"><i class="fab fa-github"></i></a>
-                        </div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <a class="text-white" href="#">Privacy</a>
-                            <span class="px-3">|</span>
-                            <a class="text-white" href="#">Terms</a>
-                            <span class="px-3">|</span>
-                            <a class="text-white" href="#">FAQs</a>
-                            <span class="px-3">|</span>
-                            <a class="text-white" href="#">Help</a>
                         </div>
                         <p class="m-0">&copy; Antony M. Gitau 2022 | Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
                     </div>
