--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
-                        <!--a href="" class="btn btn-block border-right">Download CV</a-->
+                        <a href="https://drive.google.com/file/d/1xUSGqh5gBoGkdEIrSNpZhujR5kvCR0Kh/view?usp=sharing" class="btn btn-block border-right">Download CV
                         <a href="#contact" class="btn btn-block btn-scroll">Contact Me</a>
                     </div>
                 </div>
