updated some changes on the project section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
-                                    <h5 class="mb-1">Design Thinking Challenge</h5>
+                                    <h5 class="mb-1">Documentation Focal Point</h5>
                                     <p class="mb-2">Uvumbuzi Tech Challenge | <small>June 2021 -  August 2021 </small></p>
                                     <p> As the documentation focal point of the cook team, I helped our team to log all our research, designs, communication, and all revelant
                                         documents during the whole process of designing a low cost prototype for cooking to be used by individuals living in Kakuma and Kaloyebei.</p>
@@ -192,7 +192,8 @@
                     <div class="row px-3">
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-4">Some of my projects</h2>
-                            
+                            <p> Out of class projects include any technical involvement that does not contribute to my biomedical engineering degree grade point average. </p>
+                            <p> Class projects include hands on activities that  directly contributed to my grade point average.</p>
                         </div>
                         <div class="col-12">
                             <div class="row">
