--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 to better care. </p>
 
                                 <p> My career plan involves pursuing a Biomedical Data Science 
-                                postgraduate degree with reseach interest in omics technologies to 
+                                postgraduate degree with research interest in omics technologies to 
                                 solve challenges in precision medicine and 
                                 stratified healthcare. </p>
 
@@ -418,7 +418,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1"><a href="https://www.linkedin.com/feed/update/urn:li:activity:6990241417381965824?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer"> AWS Impact+ Hackathon</a></h5>
-                            <p class="mb-2"><strong> Strathmore University, Nairobi, Kenya </strong> | <small>September 2022</small></p>
+                            <p class="mb-2"><strong> Strathmore University, Nairobi, Kenya </strong> | <small>October 2022</small></p>
                             <p> Pitched a solution on climate change (e-waste management system) and won (team of five) the second runs up position.</p>
                         </div>
                         
@@ -426,7 +426,9 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1"><a href="https://moody-challenge.physionet.org/2022/" target="_blank" rel="noopener noreferrer">PhysioNet 2022</a></h5>
                             <p class="mb-2"><strong> Online </strong> | <small>September 2022</small></p>
-                            <p>Actively participated in the PhysioNet Competition together with 4 others to completion and eventually got our work published on the Computing in Cardiology Website.
+                            <p>Actively participated in the PhysioNet Competition in collaboration with my mentor,
+                                <a href="https://www.linkedin.com/in/bjsingstad/" target="_blank" rel="noopener noreferrer"> Bjørn-Jostein </a>  and three others
+                                 to a successful completion that saw out work published on the Computing in Cardiology Website.
                                 <a href="https://cinc.org/2022/Program/accepted/108_Preprint.pdf" target="_blank" rel="noopener noreferrer"> Paper Preprint.</a></p>
                         </div>
                         <div class="position-relative mb-4">
