added feature cloud and paperwithcode link

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                                     <div class="position-relative overflow-hidden mb-2">
                                         <img class="img-fluid w-100" src="img/redbullbasement.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                            <div> <h5 class="d-inline text-primary"> </h5> <br>
-                                                <a href="https://youtu.be/eWX_HnqJdBs"target="_blank" rel="noopener noreferrer"><h3>An application that aims to fight medical misinformation</h3></br>
+                                            <div> <h1 class="d-inline text-primary"> </h1><br>
+                                                <a href="https://youtu.be/eWX_HnqJdBs"target="_blank" rel="noopener noreferrer"><h3> An application that aims to fight medical misinformation</h3></br>
                                               </div>
                                             </a>
                                         </div>
@@ -418,7 +418,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1"><a href="https://www.linkedin.com/feed/update/urn:li:activity:6990241417381965824?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer"> AWS Impact+ Hackathon</a></h5>
-                            <p class="mb-2"><strong> Strathmore University, Nairobi, Kenya </strong> | <small>October 2022</small></p>
+                            <p class="mb-2"><strong> Nairobi, Kenya </strong> | <small>October 2022</small></p>
                             <p> Pitched a solution on climate change (e-waste management system) and won (team of five) the second runs up position.</p>
                         </div>
                         
@@ -429,7 +429,15 @@
                             <p>Actively participated in the PhysioNet Competition in collaboration with my mentor,
                                 <a href="https://www.linkedin.com/in/bjsingstad/" target="_blank" rel="noopener noreferrer"> Bjørn-Jostein </a>  and three others
                                  to a successful completion that saw out work published on the Computing in Cardiology Website.
-                                <a href="https://cinc.org/2022/Program/accepted/108_Preprint.pdf" target="_blank" rel="noopener noreferrer"> Paper Preprint.</a></p>
+                                <a href="https://paperswithcode.com/paper/phonocardiogram-classification-using-1" target="_blank" rel="noopener noreferrer"> Paper Preprint.</a></p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1"><a href="https://featurecloud.ai/" target="_blank" rel="noopener noreferrer">FeatureCloud Hackathon</a></h5>
+                            <p class="mb-2"><strong>Hamburg, Germany (Hybrid)</strong> | <small>October 2021</small></p>
+                            <p>Among the 25 participants of the first international FeatureCloud Hackathon on using federated Artificial Intelligence
+                                on microbiome data to identify colorectal cancer.
+                                <a href="https://github.com/Antony-gitau/FeatureCloud-Hackathon" target="_blank" rel="noopener noreferrer"> GitHub Documentation.</a></p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
