--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 to better care. </p>
 
                                 <p> My career plan involves pursuing a Biomedical Data Science 
-                                postgraduate degree with research interest in omics to 
+                                postgraduate degree with interest in using biomedical datasets to 
                                 solve challenges in precision medicine and 
                                 stratified healthcare. </p>
 
