--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                                 to better care. </p>
 
                                 <p> My career plan involves pursuing a Biomedical Data Science 
-                                postgraduate degree with interest in using biomedical datasets to 
+                                postgraduate degree with interest in using biological data, 
+                                such as genetic sequences, cell populations or protein samples to 
                                 solve challenges in precision medicine and 
                                 stratified healthcare. </p>
 
