add hands on data analysis course

--- a/index.html
+++ b/index.html
@@ -465,6 +465,13 @@
                 <div class="col-12">
                     <h4 class="title position-relative pb-2 mb-4">Courses & Certifications</h4>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
+                          <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1"> <a href="https://www.imperial.ac.uk/continuing-professional-development/short-courses/medicine/biomedical/hands-on-data-analysis/" target="_blank" rel="noopener noreferrer">  Hands-on Data Analysis for Metabolic Profiling</a></h5>
+                            <p class="mb-2"><strong>Imperial College London (online)</strong> | <small>November 2022</small></p>
+                            A week-long comprehensive, hands-on training in processing and analysing metabolomics data from LC-MS and NMR technologies.
+                            <a href="https://github.com/Antony-gitau/Hands-on-Data-Analysis-for-Metabolic-Profiling"target="_blank" rel="noopener noreferrer">Certificate of Completion.</a>
+                            </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1"><a href="https://www.eurecapro.eu/online-innovation-entrepreneurship-training-course/" target="_blank" rel="noopener noreferrer">  Innovation and Entrepreneurship</a></h5>
