add hands on data analysis course

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1"><a href="https://resources.depaul.edu/vincent-on-leadership/training/training-options/Pages/values-centered-leadership-online-certificate-i.aspx#:~:text=The%20Values%2Dcentered%20Leadership%20Certificate,and%20improve%20your%20leadership%20skills."target="_blank" rel="noopener noreferrer">Value Centered Leadership</a></h5>
-                            <p class="mb-2"><strong>DePaul University</strong> | <small> April 2020</small></p>
+                            <p class="mb-2"><strong>DePaul University (online)</strong> | <small> April 2020</small></p>
                             Won a scholarship to learn the value centered leadership principles course. Some of the topics included; diversity and multi-cultural issues, managing conflicting values, creating leadership action plan etc.
                                 <a href="https://www.linkedin.com/posts/antony-m-gitau_am-excited-to-have-had-this-chance-to-sharpen-activity-6746416753166835712-3QkQ?utm_source=linkedin_share&utm_medium=member_desktop_web"target="_blank" rel="noopener noreferrer"> Certificate of Completion.</a>
                                 
