minimal editions on the about

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 stratified healthcare. </p>
 
                                 <p> I am building skills in statistics, programming, 
-                                machine learning, bioinformatics, data stewardship & visualization 
+                                deep (machine) learning, biology, data stewardship & visualization 
                                 and scientific communication.</p>
 
                 
