fixed typos on publication section

--- a/index.html
+++ b/index.html
@@ -702,14 +702,12 @@
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4"> Blogs</h2>
             <p>
-                I am a storyteller, dedicated to preserving and sharing my journey through:
+                I am a storyteller, dedicated to preserving and sharing my journey by documenting:
                 <br>
                 <br>
-                (1) Professional experiences, such as internships, and fellowships.
+                (1) My professional experiences, such as internships, and fellowships.
                 <br>
-                (2) Deep dive into technical concepts in statistics, mathematics, machine (deep) learning, and biology, developed through my research work.
-                <br>
-                (3) Scientific publications in peer-reviewed journals.
+                (2) Technical concepts (and experiments) in statistics, mathematics, machine (deep) learning, data and biology, developed through my research work.
                 <br>
                 <br>
                 For more, visit my <a href="https://medium.com/@gitau_am" target="_blank" rel="noopener noreferrer"> Medium page</a>.
