--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
                     
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                        <h5 class="font-weight-bold mb-1"> <a href="https://kamilimu.medium.com/antony-m-gitau-getting-along-getting-ahead-ff6bedf6a650"> Medium Feature</a></h5>
+                        <h5 class="font-weight-bold mb-1"> <a href="https://kamilimu.medium.com/antony-m-gitau-getting-along-getting-ahead-ff6bedf6a650"target="_blank" rel="noopener noreferrer"> Medium Feature</a></h5>
                         <p class="mb-2"><strong>KamiLimu Mentorship Program</strong> | <small> March 2022</small></p>
-                        Among the mentees whose experience at KamiLimu was featured on the organization's medium page.
+                        Among the cohort 6 mentees whose experience at KamiLimu was featured on the organization's medium page.
                        </p>
                         
                     </div>
@@ -507,7 +507,7 @@
                                         <img class="img-fluid w-100" src="img/slidoor.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                             <div> <h5 class="d-inline text-primary"></h5> <br>
-                                                <a href="https://drive.google.com/file/d/1DSro2Acrp_OnFDF9z3u1bddzhbcp6742/view?usp=sharing"target="_blank" rel="noopener noreferrer"> <h3> Touchless washroom door opening IoT solution for persons with disabilities.</h3> </br>
+                                                <a href="https://github.com/TheBeachMaster/kamilimuiot"target="_blank" rel="noopener noreferrer"> <h3> Touchless washroom door opening IoT solution for persons with disabilities.</h3> </br>
                                               </div>
                                             </a>
                                         </div>
@@ -737,6 +737,7 @@
                 <br>
                 <a class="btn btn-sm btn-outline-primary py-2" href="https://paperswithcode.com/paper/phonocardiogram-classification-using-1" target="_blank"rel="noopener noreferrer">  Paper with code <i class="fa fa-angle-right"></i></a>
                 <a class="btn btn-sm btn-outline-primary py-2" href="https://cinc.org/prelim_program_2022/" target="_blank"rel="noopener noreferrer">  CinC proceedings <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-sm btn-outline-primary py-2" href="https://drive.google.com/file/d/13B7ISoHxp9AeXJBpC-9rT3s-ZQudXCN1/view?usp=sharing" target="_blank"rel="noopener noreferrer">  Poster<i class="fa fa-angle-right"></i></a>
                 <a class="btn btn-sm btn-outline-primary py-2" href="https://www.researchgate.net/publication/363503972_Phonocardiogram_Classification_Using_1-Dimensional_Inception_Time_Convolutional_Neural_Networks" target="_blank"rel="noopener noreferrer">  ReseachGate <i class="fa fa-angle-right"></i></a>
                 <a class="btn btn-sm btn-outline-primary py-2" href="https://medium.com/@gitau_am/heart-murmur-classification-using-a-1-dimensional-inception-time-convolutional-neural-network-d3d9c59b2ad7" target="_blank"rel="noopener noreferrer">  Blog <i class="fa fa-angle-right"></i></a>
                 <br>     
@@ -745,6 +746,7 @@
                 <br>
                 <a class="btn btn-sm btn-outline-primary py-2" href="https://dekut-dsail.github.io/assets/Technical%20Reports/Antony-DSAIL-2022.pdf" target="_blank"rel="noopener noreferrer">  Technical Report <i class="fa fa-angle-right"></i></a>
                 <a class="btn btn-sm btn-outline-primary py-2" href="https://dekut-dsail.github.io/Blogs/Knee_wearable_device.html" target="_blank"rel="noopener noreferrer">  Blog <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-sm btn-outline-primary py-2" href="https://drive.google.com/file/d/18Xwzftl2BBU-CwHbJUVoFH5OEWWLiueu/view?usp=sharing" target="_blank"rel="noopener noreferrer"> Poster <i class="fa fa-angle-right"></i></a>
               </p>
         </div>
     </div>
