updated my about

--- a/index.html
+++ b/index.html
@@ -68,23 +68,19 @@
                             <h2 class="title position-relative pb-2 mb-4">About Me</h2>
                         </div>
                         <div class="col-12">
-                                <p>I am a life-long learner.
-                                An early researcher at the intersection of medicine and engineering. 
-                                Particularly, using Artificial Intelligence (AI) in healthcare 
-                                to better care. </p>
+                                <p>I am an early researcher at the intersection of medicine and engineering, driven by a lifelong passion for learning. 
+                                 </p>
 
-                                <p> My career plan involves pursuing a  
-                                postgraduate degree in Computational Biology (Bioinformatics) with interest in using biological data, 
-                                such as genetic sequences, cell populations or patient-doctor conversations (speech, notes) to 
-                                solve challenges in precision medicine and 
-                                stratified healthcare. </p>
+                                <p> I am a final year BSc. Biomedical Engineering student at Kenyatta University passionate 
+                                    about developing and applying computational, statistical, and data-driven approaches to healthcare challenges. 
+                                    I am building skills in mathematics, programming, deep (machine) learning, biology, data stewardship, and scientific communication.</p>
 
-                                <p> I am building skills in mathematics, statistics, programming, 
-                                deep (machine) learning, biology, data stewardship & visualization 
-                                and scientific communication.</p>
+                                <p> My career plan involves pursuing a postgraduate degree in biomedical informatics, 
+                                    with interest in using a wide range of health data, including biological, medical, 
+                                    and clinical data, to improve healthcare outcomes. </p>
 
                 
-                                <p> My life's purpose is to positively impact my fellow human in the smallest ways possible. </p>
+                                <p> My work is driven by a deep sense of purpose to positively impact the lives of others in small but meaningful ways. </p>
                             
                         </div>
                     </div>
