added my reading and watching list

--- a/index.html
+++ b/index.html
@@ -773,9 +773,10 @@
                                 <br>
                                  1. With friends, walking 
                             on the mountains.
-                            <br> 2. Reading a book, listening to an audiobook, or watching a documentary (on finance, health, entrepreneurship, wellbeing, founder's memoir, or any piece I find enlightening and fun!).
-                            <!--a class="btn btn-sm btn-outline-primary py-2" href="https://future-cobweb-72f.notion.site/Books-I-ve-Read-a727c4c7d95444ea8a71d9a5fe2f5583" target="_blank"rel="noopener noreferrer"> Poster <i class="fa fa-angle-right"></i></a -->
-                            
+                            <br> 2. Reading a book, listening to an audiobook, or watching a documentary (on finance, health, entrepreneurship, wellbeing, founder's memoir, or any piece I find 
+                             <a href="https://future-cobweb-72f.notion.site/Enlightening-Fun-a727c4c7d95444ea8a71d9a5fe2f5583" target="_blank"rel="noopener noreferrer"> enlightening and fun! </a>).
+                            <!--a class="btn btn-sm btn-outline-primary py-2" href="https://future-cobweb-72f.notion.site/Enlightening-Fun-a727c4c7d95444ea8a71d9a5fe2f5583" target="_blank"rel="noopener noreferrer"> enlightening and fun! <i class="fa fa-angle-right"></i></a -->
+                           
                             <br> 3. Playing checkers, chess, poker, or solving sudokus.
                             <br> 4. Exploring different
                             cultures and places.</p>
