updated dsa experience

--- a/index.html
+++ b/index.html
@@ -181,6 +181,17 @@
 
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <h5 class="font-weight-bold mb-1"> <a href="https://www.datascienceafrica.org/dsa2023kigali/"target="_blank" rel="noopener noreferrer"> Data Science Africa 2023 </a></h5>
+                        <p class="mb-2"><strong>Kigali, Rwanda</strong> | <small> May 2023</small></p>
+                        Awarded a partial scholarship to participate in the DSA summer school and workshop 2023. 
+                        Documented some code snippets from the technical session on <a href="https://lnkd.in/da_Z_UhF"target="_blank" rel="noopener noreferrer">GitHub </a> and shared the experience on
+                       
+
+                            <a href="https://www.linkedin.com/posts/antony-m-gitau_datascience-data-technology-activity-7064901133990789120-HZul?utm_source=share&utm_medium=member_desktop"target="_blank" rel="noopener noreferrer"> LinkedIn.</a>
+                        </div>
+
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1"> <a href="https://www.humancellatlas.org/"target="_blank" rel="noopener noreferrer"> Human Cell Atlas (HCA) </a></h5>
                         <p class="mb-2"><strong> Paris, France</strong> | <small> November 2022</small></p>
                     
@@ -266,7 +277,7 @@
                         <p>Actively participated in the PhysioNet Competition in collaboration with my mentor,
                             <a href="https://www.linkedin.com/in/bjsingstad/" target="_blank" rel="noopener noreferrer"> Bjørn-Jostein </a>  and three others.
                              Successfully completed with our model ranked 14 of 39 submissions. Also, presented our work in the Computing in Cardiology conference.
-                            <a href="https://paperswithcode.com/paper/phonocardiogram-classification-using-1" target="_blank" rel="noopener noreferrer"> Paper Preprint.</a></p>
+                            <a href="#blogs" target="_blank" rel="noopener noreferrer"> Article.</a></p>
                     </div>
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
