added trondheim experience

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1"> Visiting Undergraduate Research Assistant</h5>
-                                    <p class="mb-2"><a href="https://marconilab.org/" target="_blank" rel="noopener noreferrer"> Marconi Research and Innovations Lab</a> | <small> January 2023 -  March 2023</small></p>
+                                    <p class="mb-2"><a href="https://marconilab.org/" target="_blank" rel="noopener noreferrer"> Marconi Research and Innovations Lab, Uganda</a> | <small> January 2023 -  March 2023</small></p>
                                     <p>  <a href="https://huggingface.co/AntonyG/fine-tune-wav2vec2-large-xls-r-1b-sw" target="_blank" rel="noopener noreferrer"> Developed a Swahili speech recognition model </a> as preliminary steps towards enhancing a more reliable, robust and autonomous patient-doctor documentation in Swahili speaking communities with the mentorship of <a href="https://www.linkedin.com/in/andrew-katumba-a6087050/" target="_blank" rel="noopener noreferrer"> Dr. Andrew</a>. 
                                         <br><br>Additionally, prepared and participated in a <a href="https://www.linkedin.com/posts/antony-m-gitau_precisionmedicine-breast-cancer-activity-7041451781289054208-n89-?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer">  breast cancer hackathon challenge </a> at the University of Texas
                                         Southwestern with the mentorship of <a href="https://www.linkedin.com/in/jan-mikelson/" target="_blank" rel="noopener noreferrer"> Dr. Jan</a>.
@@ -126,11 +126,11 @@
                                     <h5 class="mb-1">Documentation Focal Point</h5>
                                     <p class="mb-2"> <a href="http://uvumbuzikakuma.wordpress.com/" target="_blank" rel="noopener noreferrer"> Uvumbuzi Tech Challenge</a> | <small>June 2021 -  August 2021 </small></p>
 
-                                    <p> Collaborated in a team of six ( including Kakuma and Kaloyebei residents) for a 12 weeks research and development of flugal technology for 
-                                        low cost and sustainable cooking in Kakuma and Kaloyebei, largest refugee camps in Kenya.</p><p>
+                                    <p> Collaborated in a team of six, including Kakuma and Kaloyebei residents, for a 12 weeks research and development of flugal technology for 
+                                        low cost and sustainable cooking in largest refugee camps in Kenya - Kakuma and Kaloyebei.</p><p>
                                         
                                         Logged the cook's team research, designs, and prepared progress reports on behalf of the team. 
-                                      Used Google Workspace for all the documentation and communication. </p><p>After the challenge, I wrote a reflection of my learning and shared on a 
+                                      Used Google Workspace for all the documentation and communication. </p><p>After the challenge, I wrote a reflection of my learning and shared the results of our work on a 
                                         <a href="https://medium.com/@gitau_am/designing-for-social-impact-reflections-on-the-uvumbuzi-tech-challenge-bbc3046ff06e" target="_blank" rel="noopener noreferrer"> medium blog </a> and on
                                         <!--a href="#some of my projects">More here.</a-->
                                         <a href="https://www.linkedin.com/posts/antony-m-gitau_kakuma-kalobeyei-problemsolvingskills-activity-6841737035636719616-IxC2?utm_source=linkedin_share&utm_medium=member_desktop_web" target="_blank" rel="noopener noreferrer"> LinkedIn</a>.</p>
@@ -141,9 +141,12 @@
                                     <h5 class="mb-1">Data Intern</h5>
                                     <p class="mb-2"><a href="https://www.krowd.works/" target="_blank" rel="noopener noreferrer"> Talent Bridge Africa </a> | <small>June 2020 - December 2020</small></p>
                                     
-                                        <p> Worked fully remote for seven months investigating and preparing reports on healthcare trends, with support of senior market researcher and business consultant, to clients to support healthcare investment decisions during the pandemic.</p><p> Updated
+                                        <p> Worked fully remote for seven months investigating and preparing reports on healthcare trends, with support of senior market researcher, 
+                                            <a href="https://www.linkedin.com/in/stella-nzisa-0364b8180/" target="_blank" rel="noopener noreferrer"> Stella Nzisa,</a> 
+                                            and business consultant, <a href="https://www.linkedin.com/in/veronica-george-69890261/" target="_blank" rel="noopener noreferrer"> Veronica George,</a>
+                                            to support clients make informed healthcare investment decisions during the pandemic.</p><p> Updated
                                             the Talent Bridge Africa's healthcare database with thousands of data points from the research findings.
-                                            Collaborated using online video conferencing tools and Google Workspace to successful completion of projects. Supported two other projects on education with data preparation and organization.
+                                            Collaborated using online video conferencing tools and Google Workspace to successful completion of projects. Supported two other projects, on education, with data preparation and organization.
                                             </p><p> Gained a huge appreciation for the usefulness of data in supporting decision making.
                                             <a href="https://www.linkedin.com/in/antony-m-gitau/overlay/1635460909391/single-media-viewer/" target="_blank" rel="noopener noreferrer"> Recommendation letter.</a> 
                                         </p> 
