--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 <div class="container-fluid bg-white py-5" id="Publications">
     <div class="row px-3">
         <div class="col-12">
-            <h2 class="title position-relative pb-2 mb-4"> Blogs</h2>
+            <h2 class="title position-relative pb-2 mb-4"> Research</h2>
             <p>
                 I am a storyteller, dedicated to preserving and sharing my journey by documenting:
                 <br>
